force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <label>CheckList Response</label>
    <nameField>
        <displayFormat>QN-{000}</displayFormat>
        <label>Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckList Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>