force-app/main/default/objects/Questions__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>CheckList Responses</relationshipLabel>
    <relationshipName>CheckList_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>