force-app/main/default/objects/Questions__c/fields/ARM_Status__c.field-meta.xml
<CustomField>
    <fullName>ARM_Status__c</fullName>
    <label>ARM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SATISFIED</fullName>
            </value>
            <value>
                <fullName>NEEDS TO IMPROVE</fullName>
            </value>
            <value>
                <fullName>UNSATISFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>