force-app/main/default/objects/Questions__c/fields/Question_Options__c.field-meta.xml
<CustomField>
    <fullName>Question_Options__c</fullName>
    <label>Question Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2005</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>To be the global leader in electronics retail.</fullName>
            </value>
            <value>
                <fullName>To provide a wide range of fashionable bottom wear for women.</fullName>
            </value>
            <value>
                <fullName>To innovate in sustainable energy solutions.</fullName>
            </value>
            <value>
                <fullName>To offer the best coffee in town.</fullName>
            </value>
            <value>
                <fullName>Competitive pricing</fullName>
            </value>
            <value>
                <fullName>Technological innovation</fullName>
            </value>
            <value>
                <fullName>Customer-centric service</fullName>
            </value>
            <value>
                <fullName>Fast shipping</fullName>
            </value>
            <value>
                <fullName>Opening their 1000th store</fullName>
            </value>
            <value>
                <fullName>Launching their first overseas branch</fullName>
            </value>
            <value>
                <fullName>First participation in a major fashion week</fullName>
            </value>
            <value>
                <fullName>Reaching 1 million sales in a single year</fullName>
            </value>
            <value>
                <fullName>Speed</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Check the email for any corporate communications.</fullName>
            </value>
            <value>
                <fullName>Take a quick break before the rush begins.</fullName>
            </value>
            <value>
                <fullName>Perform a safety check and ensure all emergency exits are clear.</fullName>
            </value>
            <value>
                <fullName>Turn on the music system to set up the day&apos;s ambiance.</fullName>
            </value>
            <value>
                <fullName>Always stock the least popular items at the front.</fullName>
            </value>
            <value>
                <fullName>Use first in, first out (FIFO) method to keep inventory fresh.</fullName>
            </value>
            <value>
                <fullName>Only restock items when completely out of stock.</fullName>
            </value>
            <value>
                <fullName>Ignore expiration dates as long as the product looks fine.</fullName>
            </value>
            <value>
                <fullName>Once a year.</fullName>
            </value>
            <value>
                <fullName>Every month.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>