force-app/main/default/objects/Questions__c/fields/Quiz_Template__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz Template</label>
    <referenceTo>Quiz_Template__c</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>