force-app/main/default/objects/Questions__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklist Responses</relationshipLabel>
    <relationshipName>Quiz_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>