force-app/main/default/objects/Questions__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Questions__c</referenceTo>
    <relationshipLabel>CheckList Responses</relationshipLabel>
    <relationshipName>CheckList_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>