force-app/main/default/objects/Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Template__c</columns>
    <columns>Store__c</columns>
    <columns>Total_Score__c</columns>
    <columns>ARM_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>